[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Brickholder.gd" type="Script" id=1]
[ext_resource path="res://scenes/levelcreation/BrickZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levelcreation/NoBrickZone.tscn" type="PackedScene" id=3]

[node name="Bricks" type="Node2D"]
position = Vector2( 0, 9.26116 )
script = ExtResource( 1 )
xInterval = 40

[node name="BrickZone" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 160, 100 )

[node name="NoBrickZone" parent="." groups=[
"nobricks",
] instance=ExtResource( 3 )]
editor/display_folded = true
position = Vector2( 95.1719, 116.913 )

[node name="NoBrickZone2" parent="." groups=[
"nobricks",
] instance=ExtResource( 3 )]
editor/display_folded = true
position = Vector2( 263.159, 173.12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true
[connection signal="area_shape_entered" from="NoBrickZone" to="." method="_on_NoBrickZone_area_shape_entered"]
[connection signal="area_shape_entered" from="NoBrickZone2" to="." method="_on_NoBrickZone_area_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
